# ros2_pkg_template_c

./: CMakeLists.txt  README.md  package.xml
cmake/: deps.cmake  executable.cmake  lib.cmake  link.cmake
include/test/: publisher.hpp  subscriber.hpp  test.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_pkg_template_c/share/ros2_pkg_template_c/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_pkg_template_c/share/ros2_pkg_template_c/cmake/: ros2_pkg_template_cConfig.cmake
log/: latest_build
src/test/: publisher.cpp  subscriber.cpp  test.cpp
